fix(specification-sync): fix parsing obsolete subfields where there's no preceeding space (#154)
Refs: MRSPECS-95
(cherry picked from commit 63e828ac55bef6602726ce3b5012f912195a408b)